2003-12-12	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Cosmetics.

2003-12-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Cosmetics.

2003-11-26	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Add *.info to CLEANFILES to accomodate
	automake-1.7f/1.8 breaking building infos.

2003-09-22	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Merger from rtems-4-6-branch.

2003-09-19	Joel Sherrill <joel@OARcorp.com>

	* posix_users.texi: Merge from branch.

2003-09-04	Joel Sherrill <joel@OARcorp.com>

	PR 466/doc
	* io.t: Added sync().

2003-01-25	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* posix_users.texi: Set @setfilename posix_users.info.

2003-01-24	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Put GENERATED_FILES into $builddir.

2003-01-22	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* version.texi: Remove from CVS.
	* stamp-vti: Remove from CVS.
	* .cvsignore: Add version.texi.
	Add stamp-vti.
	Re-sort.

2003-01-21	Joel Sherrill <joel@OARcorp.com>

	* stamp-vti, version.texi: Regenerated.

2002-11-13	Joel Sherrill <joel@OARcorp.com>

	* stamp-vti, version.texi: Regenerated.

2002-10-24	Joel Sherrill <joel@OARcorp.com>

	* stamp-vti, version.texi: Regenerated.

2001-06-28	Joel Sherrill <joel@OARcorp.com>

	* preface.texi, procenv.t, process.t, signal.t, stamp-vti,
	version.texi: Updated as part of starting a sweep on the POSIX
	User's Guide.
2002-03-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Remove AUTOMAKE_OPTIONS.

2002-01-18	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: include main.am, require automake-1.5.

2001-01-17	Joel Sherrill <joel@OARcorp.com>

	* .cvsignore: Added rtems_header.html and rtems_footer.html.

2000-08-10	Joel Sherrill <joel@OARcorp.com>

	* ChangeLog: New file.